{{$NEXT}}

0.21     2014-11-01

- Added custom plugins to setup the weaver.ini file for Contributors and to
  automatically provide default license info.


0.20     2014-11-01

- Explicitly depend on Dist::Zilla::Plugin::PodWeaver because
  SurgicalPodWeaver doesn't - works around RT #87624.


0.19     2014-10-23

- Switched to Test::EOL (0.14)

- Make PkgVersion use a bit smarter (no line insertion and die on existing
  $VERSION in module)

- Update next release version to indicate if a release is a trial


0.18     2014-09-03

- Switched from ContributorsFromGit to Git::Contributors.


0.17     2014-08-15

- Renamed the attributes but didn't fix the method calls in the last version.


0.16     2014-08-15

- Renamed some options - coverage_* => pod_coverage_*


0.15     2014-08-12

- Ordering fix take 2.


0.14     2014-08-12

- Hopefully fix an ordering issue with the Git plugins.


0.13     2014-08-12

- Use GatherDir to exclude files rather than PruneFiles.


0.12     2014-08-03

- Added Test::Pod::Coverage::Configurable plugin.

- Removed the remove option in favor of -remove.


0.11     2014-08-02

- Added GitHub::Update plugin.


0.10     2014-08-02

- Added a number of additional plugins to help me make better dists.

- Moved this distro to GitHub.


0.09     2014-05-04

- Use Test::NoTabs plugin instead of NoTabsTests.


0.08     2014-04-05

- Internals fixes to work with Config::MVP that is stricter about handling
  plugin options passed by this bundle. Reported by Karen Etheridge. RT
  #94466.

- Make sure all the plugins this bundle uses end up declared as
  prereqs. Reported by Dagfinn Ilmari Mannsåker. RT #94363.


0.07     2014-01-25

- Added the PruneFiles plugin to prune the README file that gets copied from
  the build.

- Allow the README to be dirty for Git::Commit.


0.06     2014-01-25

- Added "do_munging => 0" to the options for the Authority plugin so it
  doesn't add a useless $AUTHORITY var to packages.


0.05     2013-12-13
